--- a/src/sass/_general.scss
+++ b/src/sass/_general.scss
@@ -7,10 +7,7 @@ body {
   font-family: $font;
 }
 
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-}
+
 
 ul {
   margin-block-start: 0;
@@ -29,4 +26,42 @@ figure {
 
 a {
   text-decoration: none;
+}
+
+
+// Moj reset
+
+html {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+a {
+  text-decoration: none;
+  display: block;
+  color: inherit;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
