--- a/src/sass/_my-library-films-cards-set.scss
+++ b/src/sass/_my-library-films-cards-set.scss
@@ -6,6 +6,7 @@
   flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
+  margin: 0 auto;
 
   @media screen and (min-width: 768px) {
     padding-block: 60px;
