Add breakpoint, nav and header style

--- a/src/partials/library-header.html
+++ b/src/partials/library-header.html
@@ -1,3 +1,8 @@
 <section class="section section--library">
-  <div class="container container--library">test</div>
+  <div class="container container--library">
+    <div class="nav">
+      <a href="" class="nav__link">home</a>
+      <a href="" class="nav__link">my library</a>
+    </div>
+  </div>
 </section>
