--- a/src/sass/_variable.scss
+++ b/src/sass/_variable.scss
@@ -7,3 +7,8 @@ $orange-font: #ff6b08;
 $orange-button: #ff6b01;
 $background: #e5e5e5;
 $footer: #f7f7f7;
+
+//Punkty przerwania
+$mobile: 320px;
+$tablet: 768px;
+$desktop: 1280px;
