--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -6,11 +6,7 @@
 
 body {
   font-family: "Roboto";
-}
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
+  background-color: black;
 }
 
 ul {
@@ -30,4 +26,125 @@ figure {
 
 a {
   text-decoration: none;
+}
+
+html {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  display: block;
+  color: inherit;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.container {
+  padding: 0 20px;
+  width: 100%;
+  margin: 0 auto;
+}
+@media (min-width: 320px) {
+  .container {
+    width: 320px;
+    padding: 0 20px;
+  }
+}
+@media (min-width: 768px) {
+  .container {
+    width: 768px;
+    padding: 0 32px;
+  }
+}
+@media (min-width: 1024px) {
+  .container {
+    width: 1024px;
+    padding: 0 32px;
+  }
+}
+
+.section--library {
+  margin: 0 auto;
+  background: #8c8c8c;
+  background-image: url("../images/library-m.jpg"); /* fallback */
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/library-m.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+.films-cards-set {
+  padding-top: 20px;
+  padding-bottom: 40px;
+  padding-inline: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  margin: 0 auto;
+}
+@media screen and (min-width: 768px) {
+  .films-cards-set {
+    padding-block: 60px;
+    padding-inline: 32px;
+    gap: 32px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .films-cards-set {
+    gap: 16px;
+    justify-content: flex-start;
+  }
+}
+
+.film-card {
+  flex-basis: 100%;
+  height: 438px;
+}
+@media screen and (min-width: 768px) {
+  .film-card {
+    flex-basis: calc((100% - 32px) / 2);
+    height: 495px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .film-card {
+    flex-basis: calc((100% - 32px) / 3);
+    height: 634px;
+    margin-bottom: 16px;
+  }
+}
+@media screen and (max-width: 1279px) {
+  .film-card {
+    max-width: 336px;
+  }
 }/*# sourceMappingURL=index.css.map */
