--- a/src/partials/library-header.html
+++ b/src/partials/library-header.html
@@ -1,8 +1,23 @@
 <section class="section section--library">
-  <div class="container container--library">
-    <div class="nav">
-      <a href="" class="nav__link">home</a>
-      <a href="" class="nav__link">my library</a>
+  <div class="header header--library">
+    <div class="header__menu">
+      <div class="logo">
+        <svg class="logo__icon" width="24" height="24">
+          <use href="./images/icons.svg#icon-film"></use>
+        </svg>
+      </div>
+      <div class="nav">
+        <a href="" class="nav__link">home</a>
+        <a href="" class="nav__link">my library</a>
+      </div>
+    </div>
+    <div class="header__body">
+      <button class="header__button">
+        <span class="header__text">watched</span>
+      </button>
+      <button class="header__button">
+        <span class="header__text">queue</span>
+      </button>
     </div>
   </div>
 </section>
