--- a/src/partials/library-header.html
+++ b/src/partials/library-header.html
@@ -2,13 +2,14 @@
   <div class="header header--library">
     <div class="header__menu">
       <div class="logo">
-        <svg class="logo__icon" width="24" height="24">
-          <use href="./images/icons.svg#icon-film"></use>
-        </svg>
+        <a href="index.html" class="logo__link" target="_self"
+          ><svg class="logo__icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-film"></use></svg
+        ></a>
       </div>
       <div class="nav">
-        <a href="" class="nav__link">home</a>
-        <a href="" class="nav__link">my library</a>
+        <a href="index.html" class="nav__link" target="_self">home</a>
+        <a href="#" class="nav__link" target="_self">my library</a>
       </div>
     </div>
     <div class="header__body">
