--- a/src/sass/_library-header.scss
+++ b/src/sass/_library-header.scss
@@ -25,10 +25,18 @@
   align-items: center;
   gap: 39px;
 }
-.logo__icon {
+.logo__link {
   stroke: $white;
   fill: none;
+  outline: none;
+  transition: stroke $transition;
+  &:hover,
+  &:focus {
+    stroke: $orange-font;
+    fill: none;
+  }
 }
+
 .nav__link {
   color: $white;
   font-style: normal;
@@ -36,6 +44,12 @@
   font-size: 12px;
   line-height: 1.16;
   text-transform: uppercase;
+  transition: color $transition;
+  &:hover,
+  &:focus {
+    outline: none;
+    color: $orange-font;
+  }
 }
 .header__body {
   padding-block: 60px;
@@ -50,9 +64,12 @@
   border-radius: 5px;
   border: 1px solid $white;
   cursor: pointer;
-  &:hover {
+  transition: background-color $transition, box-shadow $transition;
+  &:hover,
+  &:focus {
     background: $orange-button;
     border: none;
+    outline: none;
     box-shadow: (
       0px 4px 4px rgba(0 0 0 / 0.25),
       0px 8px 43px rgba(255 107 1 / 0.6)
@@ -66,4 +83,15 @@
   font-size: 12px;
   line-height: 16px;
   text-transform: uppercase;
+}
+@media screen and (min-width: $mobile) and (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .section--library {
+    background-image: linear-gradient(
+        rgba(47 48 58 / 0.4),
+        rgba(47 48 58 / 0.4)
+      ),
+      url('../images/library-m@2x.jpg');
+  }
 }
