--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,5 +2,6 @@
 @import './variable';
 @import './general';
 @import './container';
+@import './header';
 @import './library-header';
 @import './my-library-films-cards-set';
