--- a/src/sass/_one-film-card.scss
+++ b/src/sass/_one-film-card.scss
@@ -5,10 +5,10 @@
   font-size: 12px;
   line-height: calc(16 / 12);
   @media (min-width: 768px) {
-    width: 340px;
+    width: 100%;
   }
-  @media (min-width: 1024px) {
-    width: 400px;
+  @media (min-width: 1280px) {
+    width: 100%;
     font-size: 20px;
     line-height: calc(24 / 20);
   }
@@ -22,14 +22,14 @@
   line-height: calc(16 / 12);
   text-align: left;
 
-  @media (min-width: 1024px) {
+  @media (min-width: 1280px) {
     font-size: 20px;
     line-height: calc(24 / 20);
   }
 }
 
 .film__img {
-  height: 100%;
+  height: 402px;
   width: 100%;
   display: block;
   border-radius: 5px;
@@ -37,11 +37,11 @@
   transition: transform 250ms cubic-bezier(0.85, 0.67, 0.04, 0.4);
 
   @media (min-width: 768px) {
-    width: 340px;
+    width: 100%;
     height: 455px;
   }
-  @media (min-width: 1024px) {
-    width: 400px;
+  @media (min-width: 1280px) {
+    width: 100%;
     height: 570px;
   }
 }
