--- a/src/sass/_one-film-card.scss
+++ b/src/sass/_one-film-card.scss
@@ -46,6 +46,7 @@
   }
 }
 
+// taki tam hover mozna go zmienic na jakis inny
 .film__img:hover {
     position: relative;
     box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.77);
