Nanioslem dwie poprawki

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,7 +6,7 @@
         <svg class="header-nav__svg">
             <use href="../images/header-home/film.svg#film"></use>
         </svg>
-        <h2 class="header-nav__name">Filmoteka</h2>
+        <span class="header-nav__name">Filmoteka</span>
         </a>
     </div>
     <div class="header-nav-items">
