--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -55,7 +55,7 @@
     padding: 0px;
     font-size: 12px;
     font-weight: 500;
-    line-height: 14.06px;
+    line-height: 1.16;
     align-items: center;
     color: $white;
     text-transform: uppercase;
