--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,7 @@
     <div class="header-nav__logo">
         <a href="index.html" class="header-logo">
         <svg class="header-nav__svg">
-            <use href="../images/header-home/film.svg#film"></use>
+            <use href="./images/header-home/film.svg#film"></use>
         </svg>
         <span class="header-nav__name">Filmoteka</span>
         </a>
