--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,35 +1,44 @@
 <header class="section">
   <div class="container-header">
     <div class="header-nav">
-    <div class="header-nav__logo">
+      <div class="header-nav__logo">
         <a href="index.html" class="header-logo">
-        <svg class="header-nav__svg">
+          <svg class="header-nav__svg">
             <use href="./images/header-home/film.svg#film"></use>
-        </svg>
-        <span class="header-nav__name">Filmoteka</span>
+          </svg>
+          <span class="header-nav__name">Filmoteka</span>
         </a>
-    </div>
-    <div class="header-nav-items">
+      </div>
+      <div class="header-nav-items">
         <ul class="header-nav-items__page">
-            <li><a href="index.html" class="header-nav-items__link header-nav-items__link--active">Home</a></li>
-            <li><a href="library.html" class="header-nav-items__link">My library</a></li>
+          <li>
+            <a
+              href="index.html"
+              class="header-nav-items__link header-nav-items__link--active"
+              >Home</a
+            >
+          </li>
+          <li>
+            <a href="library.html" class="header-nav-items__link">My library</a>
+          </li>
         </ul>
+      </div>
+    </div>
+    <div class="header-search">
+      <form class="header-search__form" id="search-form">
+        <input
+          class="header-search__input"
+          type="text"
+          name="movieSearch"
+          autocomplete="off"
+          placeholder="Movie search"
+        />
+        <button type="submit" class="header-search__btn">
+          <svg class="header-search__icon">
+            <use href="./images/header-home/search2.svg"></use>
+          </svg>
+        </button>
+      </form>
     </div>
   </div>
-<div class="header-search">
-     <form class="header-search__form" id="search-form">
-  <input class="header-search__input"
-    type="text"
-    name="movieSearch"
-    autocomplete="off"
-    placeholder="Movie search"
-  />
-  <button type="submit" class="header-search__btn">
-    <svg class="header-search__icon">
-      <use href="../images/header-home/search2.svg#search2"></use>
-    </svg>
-  </button>
-</form>
-</div>
-</div>
 </header>
