--- a/src/partials/library-header.html
+++ b/src/partials/library-header.html
@@ -4,21 +4,30 @@
       <div class="logo">
         <a href="index.html" class="logo__link" target="_self"
           ><svg class="logo__icon" width="24" height="24">
-            <use href="./images/icons.svg#icon-film"></use></svg
-        ></a>
+            <use href="./images/icons.svg#icon-film"></use>
+          </svg>
+        </a>
       </div>
       <div class="nav">
-        <a href="index.html" class="nav__link" target="_self">home</a>
-        <a href="#" class="nav__link" target="_self">my library</a>
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="index.html" class="nav__link" target="_self">home</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link" target="_self">my library</a>
+          </li>
+        </ul>
       </div>
     </div>
-    <div class="header__body">
-      <button class="header__button">
-        <span class="header__text">watched</span>
-      </button>
-      <button class="header__button">
-        <span class="header__text">queue</span>
-      </button>
+    <div class="buttons">
+      <ul class="buttons__list">
+        <li class="buttons__item">
+          <button class="buttons__button">watched</button>
+        </li>
+        <li class="buttons__item">
+          <button class="buttons__button">queue</button>
+        </li>
+      </ul>
     </div>
   </div>
 </section>
