--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,8 +3,8 @@
     <div class="header-nav">
       <div class="header-nav__logo">
         <a href="index.html" class="header-logo">
-          <svg class="header-nav__svg">
-            <use href="./images/header-home/film.svg#film"></use>
+          <svg class="header-nav__svg" width="24" height="24">
+            <use href="./images/icons.svg#icon-film"></use>
           </svg>
           <span class="header-nav__name">Filmoteka</span>
         </a>
@@ -34,8 +34,8 @@
           placeholder="Movie search"
         />
         <button type="submit" class="header-search__btn">
-          <svg class="header-search__icon">
-            <use href="./images/header-home/search2.svg"></use>
+          <svg class="header-search__icon" width="12" height="12">
+            <use href="./images/icons.svg#icon-search"></use>
           </svg>
         </button>
       </form>
