--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,52 +1,51 @@
-@media screen and (min-width: $mobile) {
-    .container-header {
-        margin: 0;
-        height: 230px;
-        max-width: 100%;
-        background-image: url(../images/header-home/header-home-bg-mobile.jpg);
-        @media (min-device-pixel-ratio: 2),
-        (-webkit-min-device-pixel-ratio: 2),
-        (min-resolution: 192dpi),
-        (min-resolution: 2dppx) {
-        background-image: url(../images/header-home/header-home-bg-mobile@2.jpg);
-        }
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
+.container-header {
+        margin: 0 auto;
         background: $gray;
+        height: 230px;
+        width: 100%;
+        max-width: 100%;
+        background-image:  linear-gradient(rgba(0 0 0 / 0.56), rgba(0 0 0 / 0.56)), 
+        url('../images/header-home-bg-mobile.webp');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
     }
 .header-nav {
     display: flex;
     height: 118px;
     justify-content: space-between;
+    align-items: center;
 }
 .header-nav__logo {
         margin-top: 40px;
         margin-left: 20px;
         margin-bottom: 51px;
+        justify-content: space-between;
         align-items: center;
         display: flex;
+        text-decoration: none;
     }
 
 .header-logo {
-    text-decoration: none;
-}
-.header-logo:hover,
-:focus {
-    color: $orange-font;
-}
-.header-nav__svg {
+  stroke: $white;
+  fill: none;
+  outline: none;
+  transition: stroke $transition;
+  transition: color $transition;
+  &:hover,
+  &:focus {
+    stroke: $orange-font;
     fill: none;
-    color: $white;
-    height: 24px;
-    width: 24px;
-    }
+    color: $orange-font;
+  }
+}
+
 .header-nav__name {
         display: none;
     }
 .header-nav-items {
     display: flex;
-    justify-items: flex-end;
+    justify-self: flex-end;
 }
 .header-nav-items__page {
     text-decoration: none;
@@ -60,7 +59,6 @@
     color: $white;
     text-transform: uppercase;
     gap: 39px;
-    margin-top: 44px;
     margin-right: 20px;
     justify-content: flex-end;
     }
@@ -69,11 +67,11 @@
     display: flex;
     align-items: center;
 }
-.header-nav__link:hover,
+.header-nav-items__link:hover,
 :focus {
     color: $orange-font;
 }
-.header-nav-items--acive::after {
+.header-nav-items__link--active::after {
     content: "";
     position: absolute;
     height: 3px;
@@ -91,93 +89,106 @@
     height: 20px;
     display: flex;
     width: 280px;
-    border-bottom: 0.5px solid white;
+    border-bottom: 0.5px solid $white;
     margin: 0;
     }
 .header-search__input {
     background-color: inherit;
     border: none;
     width: 264px;
-    caret-color: $red;
+    caret-color: $orange-font;
 }
 .header-search__input:focus,
     :hover {
     outline: none;
-    border: none;
     }
 .header-search__input::placeholder {
         color: white;
+        font-size: 14px;
     }
 .header-search__btn {
-    height: 10px;
-    width: 10px;
+    height: 12px;
+    width: 12px;
     background-color: inherit;
     border: none;
     justify-content: flex-end;
+    cursor: pointer;
+    &:focus,
+    :hover{
+        stroke: $orange-font;
+        fill: none;
+    }
     }
 .header-search__icon {
+    display: block;
+    stroke: $white;
     fill: none;
-    height: 10px;
-    width: 10px;
+    outline: none;
     }
-}
 
-@media screen and (min-width: $tablet){
-    
+    @media screen and (min-width: $mobile) and (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
     .container-header {
-        background-image: url(../images/header-home/header-home-bg-tablet.jpg);
-        @media (min-device-pixel-ratio: 2),
-        (-webkit-min-device-pixel-ratio: 2),
-        (min-resolution: 192dpi),
-        (min-resolution: 2dppx) {
-            background-image: url(../images/header-home/header-home-bg-tablet@2.jpg);
+        background-image:  linear-gradient(rgba(0 0 0 / 0.56), rgba(0 0 0 / 0.56)),
+        url('../images/header-home-bg-mobile@2.webp');
     }
+  }
+
+@media screen and (min-width: $tablet) { 
+    .container-header {
+        height: 216px;
+        background-image:  linear-gradient(rgba(0 0 0 / 0.56), rgba(0 0 0 / 0.56)),
+        url('../images/header-home-bg-tablet.webp');
 }
 .header-nav {
     display: flex;
     height: 116px;
 }
-}
+
 .header-nav__name {
-    display: block;
+    display: inline-block;
     margin: 0px;
     color: $white;
     font-size: 30px;
     font-weight: 500;
     line-height: 35.16px;
     align-items: center;
+    &:hover,
+    &:focus {
+    color: $orange-font;
+
+  }
 }
 .header-nav__svg {
     margin-right: 10px;
 }
-
-
-@media screen and (min-width: $desktop){
-.container-header {
-    height: 216px;
-    background-image: url(../images/header-home/header-home-bg.jpg);
-    @media (min-device-pixel-ratio: 2),
-        (-webkit-min-device-pixel-ratio: 2),
-        (min-resolution: 192dpi),
-        (min-resolution: 2dppx) {
-           
-         background-image: url(../images/header-home/header-home-bg@2.jpg);
 }
+
+@media screen and (min-width: $tablet) and (min-device-pixel-ratio: 2),
+  screen and (min-width: $tablet) and (min-resolution: 192dpi),
+  screen and (min-width: $tablet) and (min-resolution: 2dppx) {
+    .container-header {
+    background-image:  linear-gradient(rgba(0 0 0 / 0.56), rgba(0 0 0 / 0.56)),
+    url('../images/header-home-bg-tablet@2.webp');
+  }
+  }
+
+@media screen and (min-width: $desktop) {
+.container-header {
+    background-image:  linear-gradient(rgba(0 0 0 / 0.56), rgba(0 0 0 / 0.56)), 
+    url('../images/header-home-bg.webp');
 }
 .header-nav__logo {
     margin-top: 45px;
     margin-left: 32px;
     margin-bottom: 41px;
-    justify-content: space-between;
 }
 .header-nav-items {
-    display: flex;
-    justify-content: flex-end;
-    margin-right: 32px;
-    justify-items: flex-end; 
+    align-items: center;
 }
 .header-nav-items__page {
-    margin-top: 49px;
+    margin-right: 32px;
 }
 .header-search {
     height: 100px;
@@ -186,6 +197,14 @@
     width: 394px;
 }
 .header-search__input {
-    width: 374px;
+    width: 382px;
 }
 }
+@media screen and (min-width: $desktop) and (min-device-pixel-ratio: 2),
+  screen and (min-width: $desktop) and (min-resolution: 192dpi),
+  screen and (min-width: $desktop) and (min-resolution: 2dppx) {
+    .container-header {
+        background-image:  linear-gradient(rgba(0 0 0 / 0.56), rgba(0 0 0 / 0.56)), 
+        url('../images/header-home-bg@2.webp');
+    }
+  }
