--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -114,7 +114,7 @@
     justify-content: flex-end;
     cursor: pointer;
     &:focus,
-    :hover{
+    &:hover {
         stroke: $orange-font;
         fill: none;
     }
