Add tablet and desktop styles

--- a/src/partials/library-header.html
+++ b/src/partials/library-header.html
@@ -6,6 +6,7 @@
           ><svg class="logo__icon" width="24" height="24">
             <use href="./images/icons.svg#icon-film"></use>
           </svg>
+          <span class="logo__text">Filmoteka</span>
         </a>
       </div>
       <div class="nav">
@@ -14,7 +15,9 @@
             <a href="index.html" class="nav__link" target="_self">home</a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link" target="_self">my library</a>
+            <a href="#" class="nav__link nav__link--active" target="_self"
+              >my library</a
+            >
           </li>
         </ul>
       </div>
@@ -22,10 +25,10 @@
     <div class="buttons">
       <ul class="buttons__list">
         <li class="buttons__item">
-          <button class="buttons__button">watched</button>
+          <button class="buttons__button" type="button">watched</button>
         </li>
         <li class="buttons__item">
-          <button class="buttons__button">queue</button>
+          <button class="buttons__button" type="button">queue</button>
         </li>
       </ul>
     </div>
