--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -31,7 +31,7 @@
   fill: none;
   outline: none;
   color: $white;
-  transition: all $transition;
+  transition: stroke $transition, color $transition;
   &:hover,
   &:focus {
     stroke: $orange-font;
