--- a/src/sass/_variable.scss
+++ b/src/sass/_variable.scss
@@ -7,6 +7,7 @@ $orange-font: #ff6b08;
 $orange-button: #ff6b01;
 $background: #e5e5e5;
 $footer: #f7f7f7;
+$footer-font: #545454;
 
 //Punkty przerwania
 $mobile: 320px;
