--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
     <div>&copy; 2020 | All Rights Reserved |</div>
     <div class="footer__wrapper">
       Developed with<svg class="footer__icon" width="14" height="12.88">
-        <use href="../images/icons.svg#icon-heart"></use></svg>by<a class="footer__font">GoIT Students</a>
+        <use href="./images/icons.svg#icon-heart"></use></svg>by<a class="footer__font">GoIT Students</a>
     </div>
   </div>
 </footer>
