--- a/src/sass/_container.scss
+++ b/src/sass/_container.scss
@@ -1,20 +1,11 @@
 .container {
-	padding: 0 20px;
-	width: 100%;
-	margin: 0 auto;
+  padding: 0 20px;
+  width: 100%;
+  margin: 0 auto;
+}
 
-	@media (min-width: 320px) {
-		width: 320px;
-		padding: 0 20px;
-	}
-
-	@media (min-width: 768px) {
-		width: 768px;
-		padding: 0 32px;
-	}
-
-	@media (min-width: 1280px) {
-		width: 1280px;
-		padding: 0 32px;
-	}
+@media screen and (min-width: $tablet) {
+  .container {
+    padding: 0 32px;
+  }
 }
