--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,9 +1,13 @@
 <footer class="container">
   <div class="footer">
-    <div>&copy; 2020 | All Rights Reserved |</div>
+    <p>&copy; 2020 | All Rights Reserved |</p>
     <div class="footer__wrapper">
-      Developed with<svg class="footer__icon" width="14" height="12.88">
-        <use href="./images/icons.svg#icon-heart"></use></svg>by<a class="footer__font">GoIT Students</a>
+      <p>Developed with</p>
+      <svg class="footer__icon" width="14" height="12.88">
+        <use href="./images/icons.svg#icon-heart"></use>
+      </svg>
+      <p>by</p>
+      <a class="footer__font">GoIT Students</a>
     </div>
   </div>
 </footer>
