--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,19 +1,22 @@
 .footer {
-  font-family: var($font);
+  font-family: $font;
   font-size: 14px;
   line-height: 1.14;
-  color: var($footer-font);
+  color: $footer-font;
   padding-bottom: 29.7px;
   padding-top: 28.71px;
   margin: 0 auto;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 
   @media (min-width: 768px) {
     padding-block: 30px;
     font-size: 16px;
     line-height: 1.19;
+    flex-direction: row;
+    justify-content: center;
   }
 
   @media (min-width: 1280px) {
@@ -22,7 +25,8 @@
 }
 
 .footer__wrapper {
-  align-content: center;
+  align-items: center;
+  display: flex;
   padding-top: 9.9px;
 
   @media (min-width: 768px) {
@@ -32,8 +36,8 @@
 }
 
 .footer__icon {
-  padding-inline: 10px;
-  fill: var($orange-font);
+  margin-inline: 10px;
+  fill: $orange-font;
 }
 
 .footer__font {
