Change class name and desktop display style

--- a/src/partials/library-header.html
+++ b/src/partials/library-header.html
@@ -1,6 +1,6 @@
 <section class="section section--library">
-  <div class="header header--library">
-    <div class="header__menu">
+  <div class="container container--library">
+    <div class="header header--library">
       <div class="logo">
         <a href="index.html" class="logo__link" target="_self"
           ><svg class="logo__icon" width="24" height="24">
@@ -25,10 +25,14 @@
     <div class="buttons">
       <ul class="buttons__list">
         <li class="buttons__item">
-          <button class="buttons__button" type="button">watched</button>
+          <button class="buttons__button" type="button" data-watched>
+            watched
+          </button>
         </li>
         <li class="buttons__item">
-          <button class="buttons__button" type="button">queue</button>
+          <button class="buttons__button" type="button" data-queue>
+            queue
+          </button>
         </li>
       </ul>
     </div>
