Fix desktop display style

--- a/src/sass/_library-header.scss
+++ b/src/sass/_library-header.scss
@@ -154,7 +154,7 @@
     background-image: linear-gradient(rgba(0 0 0 / 0.56), rgba(0 0 0 / 0.56)),
       url('../images/library/library-d.webp');
   }
-  .header--library {
+  .container--library {
     max-width: 1280px;
   }
 }
