changes in footer

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,13 +1,13 @@
-<footer class="container">
-  <div class="footer">
-    <p>&copy; 2020 | All Rights Reserved |</p>
-    <div class="footer__wrapper">
-      <p>Developed with</p>
+<footer class="container footer">
+  <p>&copy; 2020 | All Rights Reserved |</p>
+  <div class="footer__wrapper">
+    <p>
+      Developed with
       <svg class="footer__icon" width="14" height="12.88">
         <use href="./images/icons.svg#icon-heart"></use>
       </svg>
-      <p>by</p>
-      <a class="footer__font">GoIT Students</a>
-    </div>
+      by
+      <a href="#" class="footer__font">GoIT Students</a>
+    </p>
   </div>
 </footer>
