Adding beating heart

--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -44,3 +44,11 @@
   text-decoration: underline;
   padding-left: 4px;
 }
+
+.footer__paragraph1{
+  padding-right: 5px;
+}
+
+.footer__paragraph2{
+  padding-left: 5px;
+}
